Scrollbar fix - Note to self, switch ON scrollbars when testing your website

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -456,6 +456,10 @@ div.col > section > h3 {
 	background-color: @frame-colour;
 }
 
+#projects {
+	overflow: hidden;
+}
+
 .panel {
 	width: 300px;
 	background-color: @link-colour;
